--- a/style.css
+++ b/style.css
@@ -10,8 +10,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column-reverse;
 }
 
 canvas {
     border: solid 2px lightgray;
+}
+
+.score {
+   font-size: 30px;
+   width: 502px;
+   height: 50px;
+   display: flex;
+   font-weight: 500;
+   align-items: center;
+   font-family: Arial, Helvetica, sans-serif;
+   user-select: none;
 }
